perf(ratings): eliminate N+1 with single aggregate query per list request
- Add RatingRepository.aggregateByLodgingIds: JPQL GROUP BY query returning
  AVG and COUNT per lodging id — collapses N per-lodging queries into 1
- Guard empty ids collection in default method to avoid DB rejection of empty IN
- Replace per-DTO enrichWithRatings with a batch overload in LodgingServiceImpl:
  all list/search endpoints now issue exactly 1 aggregate query per request
- Single-item adapter reuses the batch path for save/update/findById
- Rounding contract preserved: Math.round(avg * 10.0) / 10.0 (one decimal place)
- Lodgings absent from query result (zero ratings) post-filled with 0.0/0

Tests: SC-3.1 (batch query count), SC-3.2 (rounding cases), SC-3.3 (zero-safe defaults)